Finalizando a implementação das Perguntas

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@ footer p{
     </article><br><br>
     <footer>
         <div class="container"><br>
-            <p>Developed by Carlos Santana <br>
-                RA: 01201095 <br>
-                1ADS-A
+            <p>Developed by Gabriel de Oliveira Santos & Ranier Dalton <br>
+                RA: 04242023 | 04242043<br>
+                1CCO-B
             </p>
         </div>
     </footer>
@@ -196,22 +196,22 @@ footer p{
     var special_words = ['CPU', 'ULA', 'Registradores', 'RAM', 'ROM', 'EPROM', 'FLASH', 'Memória de Massa', 'DMA', 'CS', 'Adress Bus', 'Data Bus', 'I5', 'I7', 'Dual Core', 'Quad Core'];
 
 var questions_list = [
-    'É o cérebro do Computador, se destaca principalmente por sua capacidade de processamento de dados', // modificado
-    'É uma das duas partes principais de uma CPU, que fica responsável pelos cálculos lógicos e matemáticos', // modificado
-    'Tipo de memória que se encontra no topo da hierarquia de memória',
-    'Tipo de memória volátil que tem como nome Random Acess Memory. Qual é a sigla deste componente?',
-    'Tipo de memória não volátil que oferece dados apenas para leitura',
-    'Tipo de memória não volátil que precisa ter seu chip exposto a luz ultravioleta para apagar seu conteúdo',
-    'Tipo particular de EEPROM que mantém as informações armazenadas sem a necessidade de uma fonte de energia elétrica',
-    'Tipo de memória que precisa ter seu conteúdo copiado na RAM para poder ser executado pela CPU',
-    'Permite que periféricos acessem diretamente a RAM sem ocupar processamento',
-    'Também conhecido como Slave Select (SS). Usado para selecionar um ou um conjunto de circuitos que estão conectados no computador',
-    'Grupo de linhas ou trilhas usadas para se referir a um endereço físico na memória. O número de trilhas determina a quantidade de endereços na memória física',
-    'Também chamado de Memory Bus. É responsável para carregar os dados.',
-    'Modelo de processador desenvolvido pela Intel qu teve sua primeira versão lançada em setembro de 2009',
-    'Modelo de processador desenvolvido pela Intel qu teve sua primeira versão lançada em novembro de 2008',    
-    'Tipo de processador que possui dois processadores ou melhor dizendo ‘dois centros, núcleos ou cores de execução‘ no mesmo circuito integrado.  Cada core tem sua própria memória cash e controlador o que permite que funcione mais efetivamente do que um processador single',
-    'Segue o mesmo princípio de um dual-core, mas agora em teoria tem o dobro da capacidade de processamento'
+    'É o cérebro do Computador, se destaca principalmente por sua capacidade de processamento de dados', // CPU
+    'É uma das duas partes principais de uma CPU, que fica responsável pelos cálculos lógicos e matemáticos', // ULA
+    'Se encontra no topo da hierarquia de memória, São constituidos por pequenas memórias internas alocadas na CPU, com objetivo de armazenar dados temporários', // Registradores
+    'Memória responsável pelo armazenamento temporário de dados que o processador está usando no momento', // RAM
+    'Memória permanente do computador, usada para armazenar dados que não se apagam quando o dispositivo é desligado, apenas de leitura', // ROM
+    'Tipo de memória não-volátil que permite a gravação ou regravação de dados e programas. Ao contrário da memória RAM, mantém os dados armazenados mesmo sem energia.', // EPROM
+    'Memória usada em dispositivos de armazenamento como pendrives, cartões SD e SSDs, que pode ser regravada várias vezes.', // FLASH
+    'Tipo de memória usado para armazenar grandes quantidades de dados de forma permanente, como discos rígidos (HD), SSDs e CDs', // Memória de Massa
+    'Método que acelera as operações que envolvem a memória e poupa o processador. Ele permite que um dispositivo de entrada e saída envie ou receba dados diretamente da memória principal, ignorando a CPU.', // DMA
+    'É um barramento de componentes de Entrada e Saída externos (periféricos, memórias etc) conectados ao Computador.', // CS
+    'Indica o local de armazenamento dos dados e gerencia seus caminhos para onde devem ser enviados.', //Adress Bus
+    'Realiza conexões, permitindo que os dados fluam entre os dispositivos.', //Data Bus
+    'Processador fabricado pela Intel fabricado em 2009, geralmente possui de seis a oito núcleos', //I5
+    'Processador fabricado pela Intel fabricado em 2008, possui mais poder de processamento', //  I7
+    'Processadores que possue até dois núcleos de processamento, dividindo as tarefas entre si', // Dual Core
+    'Processadores com o dobro da capacidade de processamento em relação ao DualCore, com aumento para 4 núcleos' //Quad Core
 ];
 
 var filledCell = [2, 20, 38, 133, 134, 135, 59, 77, 95, 113, 131, 149,
